上传NSIS打包文件

--- a/打包工具/打包工具对比.md
+++ b/打包工具/打包工具对比.md
@@ -11,7 +11,7 @@
 | 打包工具                                   | 简介                            | 优点                                         | 缺点                                                         | 是否考虑使用 |
 | ------------------------------------------ | ------------------------------- | -------------------------------------------- | ------------------------------------------------------------ | ------------ |
 | Install Shield                             | VisualStudio2015可以集成的插件  | 集成到了Visual Studio开发工具，免费          | 不支持超过2G文件的打包，步骤复杂                             |              |
-| Microsoft Visual Studio Installer Projects | 从Visual Studio里面扩展菜单安装 | 生成sln解决方案，设置简单                    |                                                              |              |
+| Microsoft Visual Studio Installer Projects | 从Visual Studio里面扩展菜单安装 | 生成sln解决方案，设置简单                    | 不支持超过2G文件的打包                                       |              |
 | setup factory                              | 图形化工具                      | 支持超过2G文件的打包                         | 步骤多，生成的脚本行数很多，不利于自动化，商用软件，存在版权问题 | 待定         |
 | Inno setup                                 | 图形化工具+脚本编辑器           | 开源软件，可以自动化                         | 不支持超过2G文件的打包                                       |              |
 | WinRar                                     | 压缩工具                        | 命令简单，可以自动化                         | 要自己写注册表和卸载程序                                     |              |
